# quip-network-node-runner

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  requirements.txt
.github/workflows/: release.yml
docs/: PRD.md
scripts/: bundle-python.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: genesis_block_public.json
src-tauri/resources/quip-node/: quip_cli.py
src-tauri/resources/quip-node/CPU/: __init__.py  sa_miner.py  sa_sampler.py
src-tauri/resources/quip-node/GPU/: __init__.py  cuda_kernel.py  cuda_miner.py  cuda_sa.py  metal_miner.py  metal_sa.py  modal_miner.py  modal_sampler.py
src-tauri/resources/quip-node/QPU/: __init__.py  dwave_miner.py  dwave_sampler.py
src-tauri/resources/quip-node/dwave_topologies/: __init__.py  embedded_topology.py  embedding_loader.py  smart_embedding.py
src-tauri/resources/quip-node/dwave_topologies/topologies/: __init__.py  advantage2_system1_10.py  advantage2_system4_1.py  chimera.py  dwave_topology.py  json_loader.py  pegasus.py  zephyr.py
src-tauri/resources/quip-node/shared/: base_miner.py  block.py  block_requirements.py  block_signer.py  block_store.py  block_synchronizer.py  blockchain_shared.py  certificate_manager.py  energy_utils.py  logging_config.py  miner.py  miner_types.py  miner_worker.py  network_node.py  node.py  node_client.py  quantum_proof_of_work.py  rest_api.py  time_utils.py  trust_store.py  version.py
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  node_manager.rs
