[package]
name = "quip-network-node"
version = "0.1.0-alpha.1"
description = "Quip Network Testnet Node"
authors = ["Quip Network"]
license = "AGPL-3.0"
edition = "2021"

[lib]
name = "quip_network_node_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
rand = "0.8"
hex = "0.4"
dirs = "5"
reqwest = { version = "0.11", features = ["json", "native-tls"] }
num_cpus = "1.16"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
